thursday pre gym

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <img class="chiikawa-char" src="https://th.bing.com/th/id/OIP.s708hOhO9mTnxtz8Dmy_MAAAAA?rs=1&pid=ImgDetMain">
     <p>and this is rakko!</p>
     <img class="chiikawa-char" src="https://th.bing.com/th/id/OIP.6MUf200tGF90jjwa4MjBBQAAAA?rs=1&pid=ImgDetMain">
+<div class="bleh">
+    <a href="about-me.html">go to about me</a>
     </div>
 </body>
 <script> src="script.js"</script>
