--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,8 @@
     alt="dog">
         <img class="chopped" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476485921_2431347903877766_6162460094678506049_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RUKUJ16I9b0Q7kNvgEhIiVL&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wH7v-OYkj20xLrRv4kOvIkxFgt9h_6zYPWwkrpnRcjJ4Q&oe=67FA9047" alt="clean">
         <div class="drones">
-            <h1> My Minions</h1>
+            <h1> My Alter-egos</h1>
         </div>
-
+        <img class="me" src="https://fgo.gamepress.gg/sites/default/files/2019-04/103%20-%20L0fgCMv.png" alt="fate">
+        <img class="real" src="https://th.bing.com/th/id/R.9a8a2b653a87b2362b13c841e9b81201?rik=6MbZx%2fEEH%2fpOhw&pid=ImgRaw&r=0" alt="love">
 </html>
