--- a/about-me.html
+++ b/about-me.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
-    <link rel="stylesheet" href="ugh.css">
-    <style>
-        .yes {
-            text-align: center;
-        }
-    </style>
-    <style>
-        .drones {
-            text-align: center;
-        }
-    </style>
-<style>
-    .guh {
-        display: flex;
-        justify-content: center;
-    }
-</style>
-</head>
-<body>
-    <div class="yes">
-        <h1> The One True King of the World </h1>
-    </div>
-    <div class="guh-container">
-        <img class="guh" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476489381_1327544231844803_1362107458234264431_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_ohc=yKngw8fv7zwQ7kNvgG5TbL1&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wFCVoRUpxeU8qX1u-iMNref__QfvnegJDtY3pwGWZ_rvg&oe=67FA97B2" alt="Hiya">
-    </div>
-        <img class="dog" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476496049_1629614481260704_280131802247142408_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=0024fc&_nc_ohc=h6mq4gjg5BIQ7kNvgEV2CEL&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wElXfOsnWoMD2Pz1iKN0GLhCA2O81CiwtnFIbudm2fDWw&oe=67FA8422"
-    alt="dog">
-        <img class="chopped" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476485921_2431347903877766_6162460094678506049_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RUKUJ16I9b0Q7kNvgEhIiVL&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wH7v-OYkj20xLrRv4kOvIkxFgt9h_6zYPWwkrpnRcjJ4Q&oe=67FA9047" alt="clean">
-        <div class="drones">
-            <h1> My Alter-egos</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>About me</title>
+        <link rel="stylesheet" href="ugh.css">
+        <style>
+            .yes {
+                text-align: center;
+            }
+        </style>
+        <style>
+            .drones {
+                text-align: center;
+            }
+        </style>
+        <style>
+            .guh {
+                display: flex;
+                justify-content: center;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="content">
+            <div class="yes">
+                <h1> The One True King of the World </h1>
+            </div>
+            <div class="guh-container">
+                <img class="guh" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476489381_1327544231844803_1362107458234264431_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_ohc=yKngw8fv7zwQ7kNvgG5TbL1&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wFCVoRUpxeU8qX1u-iMNref__QfvnegJDtY3pwGWZ_rvg&oe=67FA97B2" alt="Hiya">
+            </div>
+            <!-- <div class="drones">
+                <h1> My Alter-egos</h1> -->
+            </div>
+                <img id="dog" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476496049_1629614481260704_280131802247142408_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=0024fc&_nc_ohc=h6mq4gjg5BIQ7kNvgEV2CEL&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wElXfOsnWoMD2Pz1iKN0GLhCA2O81CiwtnFIbudm2fDWw&oe=67FA8422" alt="dog">
+                <div class="drones">
+               
+                    <h1> My Alter-egos</h1>
+
+                <img id="chopped" src="https://scontent-atl3-2.xx.fbcdn.net/v/t1.15752-9/476485921_2431347903877766_6162460094678506049_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=0024fc&_nc_ohc=RUKUJ16I9b0Q7kNvgEhIiVL&_nc_ad=z-m&_nc_cid=0&_nc_zt=23&_nc_ht=scontent-atl3-2.xx&oh=03_Q7cD1wH7v-OYkj20xLrRv4kOvIkxFgt9h_6zYPWwkrpnRcjJ4Q&oe=67FA9047" alt="clean">
+                <img class="me" src="https://fgo.gamepress.gg/sites/default/files/2019-04/103%20-%20L0fgCMv.png" alt="fate">
+            </div>
+            <!-- <img class="real" src="https://th.bing.com/th/id/R.9a8a2b653a87b2362b13c841e9b81201?rik=6MbZx%2fEEH%2fpOhw&pid=ImgRaw&r=0" alt="love"> -->
         </div>
-        <img class="me" src="https://fgo.gamepress.gg/sites/default/files/2019-04/103%20-%20L0fgCMv.png" alt="fate">
-        <img class="real" src="https://th.bing.com/th/id/R.9a8a2b653a87b2362b13c841e9b81201?rik=6MbZx%2fEEH%2fpOhw&pid=ImgRaw&r=0" alt="love">
+    </body>
 </html>
